<resources>
    <string name="app_name">Game2048</string>
    <string name="new_game">New game</string>
    <string name="go_back">Go back…</string>
    <string name="sound_effect">Sound effect</string>
    <string name="load_game">Load game</string>
    <string name="del_game">Delete game</string>
    <string name="start_here">Start here</string>
    <string name="go_back_one_step">Go back one step</string>
    <string name="disable_sound_effect">Disable sound effect</string>
    <string name="enable_sound_effect">Enable sound effect</string>
    <string name="start_time">Start@2020.11.05 16:25:10</string>
    <string name="max_number">Max Grid</string>
    <string name="score">Score   </string>
    <string name="steps">Steps   </string>
    <string name="init_steps">1000</string>
    <string name="init_score">256</string>
    <string name="init_max_number">2048</string>
    <string name="Continue">Continue</string>
    <string name="show_version">Show version</string>
    <string name="software_version">version 20201113115244</string>
    <string name="go_back_cnt">GoBack</string>
</resources>
