<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/shortcut_start_here"
        android:orderInCategory="100"
        android:title="@string/start_here"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/shortcut_new_game"
        android:orderInCategory="100"
        android:icon="@drawable/ic_new_game"
        android:title="@string/new_game"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/shortcut_go_back"
        android:orderInCategory="101"
        android:icon="@drawable/ic_go_back"
        android:title="@string/go_back_one_step"
        app:showAsAction="always" />

    <item android:id="@+id/shortcut_ctrl_voice"
        android:orderInCategory="102"
        android:icon="@drawable/ic_voice_enabled"
        android:title="@string/disable_sound_effect"
        app:showAsAction="always" />

    <item android:id="@+id/new_game"
        android:orderInCategory="103"
        android:title="@string/new_game"
        app:showAsAction="never" />

    <item android:id="@+id/load_game"
        android:orderInCategory="104"
        android:title="@string/load_game"
        app:showAsAction="never" />

    <item android:id="@+id/go_back"
        android:orderInCategory="105"
        android:title="@string/go_back"
        app:showAsAction="never" />

    <item android:id="@+id/ctrl_voice"
        android:orderInCategory="106"
        android:title="@string/sound_effect"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />
</menu>